--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -777,7 +777,7 @@ img{
                 <li>Chandigarh - India</li>
                 <li>Chitkara University</li>
                 <li>9134 - 915 - 606</li>
-                <li>tastyfood@email.com</li>
+                <li>SUPindustries@email.com</li>
             </ul>
         </div>
     </div>
