Revert "Revert "Merge branch 'master' of https://github.com/ujjwal1206/IntegratedProject""
This reverts commit b5ea6aa303e07c4b27bcd7d34cafc85d5b62518c.

--- a/src/main/resources/templates/orderPlaced.html
+++ b/src/main/resources/templates/orderPlaced.html
@@ -761,21 +761,21 @@
                     <h1>Receipt</h1>
                 </div>
 
-<!--                <table class="table table-hover">-->
-<!--                    <thead>-->
-<!--                    <tr>-->
-<!--                        <th>Components</th>-->
-<!--                    </tr>-->
-<!--                    </thead>-->
-<!--                    <tbody>-->
+                <table class="table table-hover">
+                    <thead>
+                    <tr>
+                        <th>Components</th>
+                    </tr>
+                    </thead>
+                    <tbody>
 
-<!--                    <tr th:each="entry : ${parameters}">-->
+                    <tr th:each="entry : ${parameters}">
 
-<!--                        <td th:text="${entry.key} + '  : -  ' + ${entry.value}"></td>-->
+                        <td th:text="${entry.key} + '  : -  ' + ${entry.value}"></td>
 
-<!--                    </tr>-->
-<!--                    </tbody>-->
-<!--                </table>-->
+                    </tr>
+                    </tbody>
+                </table>
                 <div>
                     Thanks for placing order!!! You would recieve a confirmation email
                     when your order would be shipped....
