facebook integration in loginPage

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -752,6 +752,9 @@
             				<div>
             					<a href="/oauth2/authorization/google"><span><i class="fab fa-google"></i></span> Google </a>
             				</div>
+                            <div>
+                                <a href="/oauth2/authorization/facebook"><span><i class="fab fa-facebook"></i></span> Facebook  </a>
+                            </div>
             			</div>
                     </form>
             	</div>
